--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@ $lightblue-color: #c1d3d2;
 $aquamarine-color:  #83a7a5;
 $lightgreen-color: #6fb048;
 $dark-teal-color:  #0f5f5c;
-$header-gradient-color: hsla(0, 0%, 50%, 0.8);
+$header-gradient-color: rgba(127, 127, 127, 0.8);
 $main-bg-light-color: #fff;
 $second-bg-darker-color: $whitesmoke-color;
 $section-description-color: $aquamarine-color;
@@ -14,3 +14,8 @@ $testimonial-author-font-color: $lightgreen-color;
 $best-features-icon-color: $lightgreen-color;
 $section-underline-color: $lightgreen-color;
 $section-title-color: $dark-teal-color;
+$twitter-bg-color: #55acee;
+$facebook-bg-color: #3b5998;
+$instagram-bg-color: #3f729b;
+$dribbble-bg-color: #ea4c89;
+$github-bg-color: #333333;
