--- a/src/pages/about-us.pug
+++ b/src/pages/about-us.pug
@@ -1,7 +1,7 @@
 doctype html
 head
     meta(charset='utf-8')
-    title About us
+    title Wapik - About us
     meta(name='viewport', content='initial-scale=1')
     link(rel='stylesheet', type='text/css', href='styles/main.css')
 body
@@ -10,7 +10,7 @@ body
             .header__content
                 .header__left
                     .header__company-name Wapik
-                    a.link.header__phone-number
+                    a.link.header__phone-number(href="tel:+62 202 555 0117")
                         span.header__phone-icon &#xf4b9;
                         |+62 202 555 0117
                 .header__right
@@ -26,11 +26,11 @@ body
                                 a.link.navigation__link(href='contact-us.html') Contact us
                     button.header__get-started-button.button.button_hover-transparent(name='Get started',value='Get started') Get started
                     .header__navigation-icon &#xf394;
-    section.masthead-about-us
+    section.masthead.masthead_about-us
         .container
-            .masthead-about-us__content
-                .masthead-about-us__caption
-                    .masthead-about-us__header Cras justo odio, dapibus ac facilisis in egestas eget quam
+            .masthead_about-us__content
+                .masthead_about-us__caption
+                    .masthead_about-us__header Cras justo odio, dapibus ac facilisis in egestas eget quam
                     button.masthead__learn-more-button.button.button_green.button_hover-transparent(name="Start your free trial", value="Start your free trial") Start your free trial
     section.about-us
         .container
@@ -85,8 +85,9 @@ body
                 .footer__column.column
                     .column__header Wapik
                     .column__data-row @: 
-                        span.column__email-address hi@wapik.com
-                    .column__data-row p: +62 202 555 0117
+                        a.column__email-address.link(href="mailto:hi@wapik.com") hi@wapik.com
+                    .column__data-row p: 
+                        a.column__phone-number.link(href="tel:+62 202 555 0117") +62 202 555 0117
                     .column__data-row.address a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
                 .footer__column.column
                     .column__header Company
@@ -124,5 +125,6 @@ body
                     a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
                     a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
                     a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
-    script(src="../scripts/headerNavigation.js")
-    script(src="../scripts/mouseClick.js")
+    script(src="scripts/headerNavigation.js")
+    script(src="scripts/activeMenu.js")
+    script(src="scripts/headerScroll.js")
