--- a/src/pages/contact-us.pug
+++ b/src/pages/contact-us.pug
@@ -1,7 +1,7 @@
 doctype html
 head
     meta(charset='utf-8')
-    title Contact us
+    title Wapik - Contact us
     meta(name='viewport', content='initial-scale=1')
     link(rel='stylesheet', type='text/css', href='styles/main.css')
 body
@@ -10,7 +10,7 @@ body
             .header__content
                 .header__left
                     .header__company-name.header__company-name_dark Wapik
-                    .header__phone-number.header__phone-number_dark
+                    a.link.header__phone-number.header__phone-number_dark(href="tel:+62 202 555 0117")
                         span.header__phone-icon.header__phone-icon_dark &#xf4b9;
                         |+62 202 555 0117
                 .header__right
@@ -46,8 +46,10 @@ body
                         .headquarter__content
                             .headquarter__header Headquarter
                             .headquarter__address 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
-                            .headquarter__phone-number +62 202 555 0117
-                            .headquarter__email hi@wapik.com
+                            .headquarter__phone-number
+                                a.link(href="tel:+62 202 555 0117") +62 202 555 0117
+                            .headquarter__email
+                                a.link(href="mailto:hi@wapik.com") hi@wapik.com
     section.call-to-action
         .container
             .call-to-action__content
@@ -61,8 +63,9 @@ body
                 .footer__column.column
                     .column__header Wapik
                     .column__data-row @: 
-                        span.column__email-address hi@wapik.com
-                    .column__data-row p: +62 202 555 0117
+                        a.column__email-address.link(href="mailto:hi@wapik.com") hi@wapik.com
+                    .column__data-row p: 
+                        a.column__phone-number.link(href="tel:+62 202 555 0117") +62 202 555 0117
                     .column__data-row.address a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
                 .footer__column.column
                     .column__header Company
@@ -100,5 +103,6 @@ body
                     a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
                     a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
                     a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
-    script(src="../scripts/headerNavigation.js")
-    script(src="../scripts/mouseClick.js")
+    script(src="scripts/headerNavigation.js")
+    script(src="scripts/activeMenu.js")
+    script(src="scripts/headerScroll.js")
