--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -1,23 +1,3 @@
-@import "variables";
-@import 'masthead-bg';
-@import 'flex';
-@import 'icons';
-.masthead-about-us{
-    @include masthead-bg("../images/about-us-bg.png");
-    &__caption{
-        padding: 255px 0 165px;
-        text-align: center;
-        width: 75%;
-        margin: 0 auto;    
-    }
-    &__header{
-        font-size: 50px;
-        font-family: "RobotoLight";
-        color: rgb(255, 255, 255);
-        line-height: 1.2;
-        margin-bottom: 20px;
-    }
-}
 .our-team{
     background-color: $whitesmoke-color;
     &__content{
@@ -46,14 +26,14 @@
             }
             &__name{
                 font-size: 15px;
-                font-family: "RobotoMedium";
+                font-family: "author-name";
                 color: rgb(15, 95, 92);
                 line-height: 1.467;
                 margin-left: 10px;
             }
             &__position{
                 font-size: 14px;
-                font-family: "RobotoRegular";
+                font-family: "main-text-font";
                 color: rgb(131, 167, 165);
                 line-height: 1.571;
                 margin-left: 10px;
@@ -63,7 +43,7 @@
             margin-right: 0;
         }
         .teammate:hover{
-            box-shadow: 0 0 20px 5px rgb(36, 33, 33);
+            box-shadow: 0 0 10px 5px rgb(136, 136, 136);
         }
     }
 }
