--- a/src/styles/contact-us.scss
+++ b/src/styles/contact-us.scss
@@ -1,5 +1,3 @@
-@import 'icons';
-@import 'flex';
 .masthead-map{
     &__content{
         width: 100%;
@@ -23,7 +21,7 @@
         background-color: #fff;
         box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12);
         font-size: 14px;
-        font-family: "RobotoReguar";
+        font-family: "main-text-font";
         color: $aquamarine-color;
         line-height: 1;
         padding: 16px 0 16px 20px;
@@ -47,14 +45,14 @@
         border: 2px dashed $lightblue-color;
         background-color: #fff;
         margin-bottom: 135px;
-        font-family: "RobotoRegular";
+        font-family: "main-text-font";
         font-size: 15px;
         &__content{
             width: 50%;
         }
         &__header{
             font-size: 22px;
-            font-family: "RobotoLight";
+            font-family: "header-font";
             color: $dark-teal-color;
             text-transform: uppercase;
             line-height: 0.955;
