--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,5 +1,5 @@
 @mixin icons($font-size){
-    font-family: "Icons";
+    font-family: "font-icons";
     font-size: $font-size;
     font-weight: normal;
 }
