adaptive menu scroll

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -220,10 +220,9 @@ body
                     a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
                     a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
                     a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
-    script(src="scripts/main.js")
     script(src="scripts/headerNavigation.js")
     script(src="scripts/activeMenu.js")
     script(src="scripts/changePhoneScreen.js")
     script(src="scripts/mouseClick.js")
     script(src="scripts/headerScroll.js")
-    //- script(src="scripts/headerMenuScroll.js")
+    script(src="scripts/headerMenuScroll.js")
